--- a/Web Development/Landing_Page/style.css
+++ b/Web Development/Landing_Page/style.css
@@ -1,4 +1,4 @@
-/* Estilos Generales*/
+/*General*/
 * {
     margin: 0;
     padding: 0;
@@ -60,7 +60,7 @@ select {
     position: relative;
 }
 
-/* Estilos del border-box*/
+/*border-box*/
 #background {
     position: fixed;
     bottom: 0px;
@@ -74,7 +74,7 @@ select {
 
 }
 
-/* Estilos del navbar*/
+/*navbar*/
 .nav {
     width: 100%;
     height: 80px;
@@ -166,7 +166,7 @@ select {
     }
 }
 
-/* Estilos del navbar*/
+/*navbar*/
 .section-container-items {
     width: 100%;
     height: auto;
@@ -368,7 +368,7 @@ select {
     background: red;
 }
 
-/* Estilos del la imagen*/
+/*image*/
 .alta {
     width: 100%;
     max-width: 490px;
